# printersTest

./: CMakeLists.txt  PrinterData.cpp  PrinterData.h  PrinterDatasOids.h  SnmpGetPrinterdata.cpp  SnmpGetPrinterdata.h  main.cpp
snmp++-3.5.2/: CMakeLists.txt
snmp++-3.5.2/include/snmp_pp/: address.h  snmp_pp.h  target.h
